WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141828
[WebEditingTester] Hook up key equivalents for new window action
https://bugs.webkit.org/show_bug.cgi?id=141828
Summary
[WebEditingTester] Hook up key equivalents for new window action
Tim Horton
Reported
2015-02-20 02:02:48 PST
[WebEditingTester] Hook up key equivalents for new window action
Attachments
Patch
(13.32 KB, patch)
2015-02-20 02:03 PST
,
Tim Horton
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-02-20 02:03:00 PST
Created
attachment 246949
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-20 02:05:54 PST
Attachment 246949
[details]
did not pass style-queue: ERROR: Tools/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2015-02-20 11:15:51 PST
Comment on
attachment 246949
[details]
Patch Looks good to me. Add the bug url to the ChangeLog.
Tim Horton
Comment 4
2015-02-20 11:18:37 PST
http://trac.webkit.org/changeset/180429
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug