Tools/WebEditingTester/WK2WebDocumentController.h
@@ -29,7 +29,5 @@
 
 @interface WK2WebDocumentController : WebDocumentController<WebDocument>
 
-- (instancetype)initWithConfiguration:(WKWebViewConfiguration *)configuration;
-
 @end
 
